--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "tests:chrome": "playwright test --config=playwright.config.ts --project=chromium",
     "tests:ff": "playwright test --config=playwright.config.ts --project=firefox",
     "tests:webkit": "playwright test --config=playwright.config.ts --project=webkit",
-    "tests:e2e": "playwright test e2e --config=e2e.config.ts --project=chromium"
+    "tests:e2e": "playwright test e2e --config=e2e.config.ts --project=chromium",
+    "tests:ui": "playwright test e2e --config=e2e.config.ts --project=chromium --ui"
   },
   "keywords": [],
   "author": "",
